# mod-nsca

./: .bintray-deb.json  .bintray-freebsd.json  .bintray-rpm.json  .bintray.json  .travis.yml  AUTHORS  MANIFEST.in  README.rst  package.sh  setup.cfg  setup.py  version.py
alignak_module_nsca/: __init__.py  nsca.py
alignak_module_nsca/ALIGNAKETC/arbiter/modules/: mod-nsca.cfg
alignak_module_nsca/etc/alignak.d/: alignak-module-nsca.ini
alignak_module_nsca/etc/arbiter/modules/: mod-nsca.cfg
etc/alignak/arbiter_cfg/modules/: mod-nsca.cfg
test/: .coveragerc  alignak_test.py  requirements.txt  send_nsca.cfg  setup_test.sh  test_module.py
test/cfg/: alignak.ini
test/cfg/alignak.d/: alignak-module-nsca.ini
test/cfg/default/: mod-logs.cfg
test/cfg/default/daemons/: broker-master.cfg
test/etc/: alignak-logger.json
