[metadata]
name = alignak_module_nsca
summary = Alignak nsca module
author = 
author_email = 
license = GNU Affero General Public License
url = https://github.com/Alignak-monitoring-contrib/mod-nsca
description-file =
    README.rst

[files]
data_files =
    etc/ = etc/*

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

